--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <div class="card-body">
                       <h5 class="card-title">E-Sport Certificate</h5>
                       <h6 class="card-subtitle mb-2 text-muted">Historical E-Sport</h6>
-                      <p class="card-text"><img class="esport-certif" src="assets/img/WhatsApp Image 2023-09-25 at 20.43.31(1).jpeg" alt=""></p>
+                      <p class="card-text"><img class="esport-certif" src="/profilWeb/assets/img/WhatsApp Image 2023-09-25 at 20.43.31(1).jpeg" alt=""></p>
                     <p>2021</p>
                     </div>
                   </div>
@@ -205,7 +205,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Course Certificate</h5>
                       <h6 class="card-subtitle mb-2 text-muted">Python For Beginners</h6>
-                      <p class="card-text"><img class="course-certif" src="assets/img/WhatsApp Image 2023-09-25 at 20.43.31.jpeg" alt=""></p>
+                      <p class="card-text"><img class="course-certif" src="/profilWeb/assets/img/WhatsApp Image 2023-09-25 at 20.43.31.jpeg" alt=""></p>
                       <p>2022</p>
                     </div>
                   </div>
@@ -214,7 +214,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Caderitation Certificate</h5>
                       <h6 class="card-subtitle mb-2 text-muted">Masa Pengenalan Prodi PSTI</h6>
-                      <p class="card-text"><img class="manpro-certif" src="assets/img/WhatsApp Image 2023-09-25 at 20.45.55.jpeg" alt=""></p>
+                      <p class="card-text"><img class="manpro-certif" src="/profilWeb/assets/img/WhatsApp Image 2023-09-25 at 20.45.55.jpeg" alt=""></p>
                       <p>2022</p>
                     </div>
                   </div>
@@ -223,7 +223,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Committe Certificate</h5>
                       <h6 class="card-subtitle mb-2 text-muted">Career Space</h6>
-                      <p class="card-text"><img class="space-certif" src="assets/img/WhatsApp Image 2023-09-25 at 20.43.30.jpeg" alt=""></p>
+                      <p class="card-text"><img class="space-certif" src="/profilWeb/assets/img/WhatsApp Image 2023-09-25 at 20.43.30.jpeg" alt=""></p>
                      <p>2023</p>
                     </div>
                   </div>
